deploy: 2e8b014c12f3895b41cdad0fc4a434e1c52a8521

--- a/index.html
+++ b/index.html
@@ -321,6 +321,21 @@
           <li>
             <a href="#errors" class="toc-h1 toc-link" data-title="Errors">Errors</a>
           </li>
+          <li>
+            <a href="#recipes" class="toc-h1 toc-link" data-title="Recipes">Recipes</a>
+          </li>
+          <li>
+            <a href="#getting-started-with-java" class="toc-h1 toc-link" data-title="Getting Started with Java">Getting Started with Java</a>
+          </li>
+          <li>
+            <a href="#getting-started-with-git" class="toc-h1 toc-link" data-title="Getting Started with Git">Getting Started with Git</a>
+          </li>
+          <li>
+            <a href="#getting-started-with-visual-studio-code" class="toc-h1 toc-link" data-title="Getting Started with Visual Studio Code">Getting Started with Visual Studio Code</a>
+          </li>
+          <li>
+            <a href="#creating-a-simple-program" class="toc-h1 toc-link" data-title="Creating a Simple Program">Creating a Simple Program</a>
+          </li>
       </ul>
         <ul class="toc-footer">
             <li><a href='https://scele.cs.ui.ac.id/course/view.php?id=3019'>DDP2 Course Page</a></li>
@@ -419,7 +434,7 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 <td>Service Unavailable -- We&#39;re temporarily offline for maintenance. Please try again later.</td>
 </tr>
 </tbody></table>
-
+<h1 id='recipes'>Recipes</h1><h1 id='getting-started-with-java'>Getting Started with Java</h1><h1 id='getting-started-with-git'>Getting Started with Git</h1><h1 id='getting-started-with-visual-studio-code'>Getting Started with Visual Studio Code</h1><h1 id='creating-a-simple-program'>Creating a Simple Program</h1>
       </div>
       <div class="dark-box">
           <div class="lang-selector">
