--- a/index.html
+++ b/index.html
@@ -325,16 +325,18 @@
             <a href="#recipes" class="toc-h1 toc-link" data-title="Recipes">Recipes</a>
           </li>
           <li>
-            <a href="#getting-started-with-java" class="toc-h1 toc-link" data-title="Getting Started with Java">Getting Started with Java</a>
-          </li>
-          <li>
-            <a href="#getting-started-with-git" class="toc-h1 toc-link" data-title="Getting Started with Git">Getting Started with Git</a>
-          </li>
-          <li>
-            <a href="#getting-started-with-visual-studio-code" class="toc-h1 toc-link" data-title="Getting Started with Visual Studio Code">Getting Started with Visual Studio Code</a>
-          </li>
-          <li>
-            <a href="#creating-a-simple-program" class="toc-h1 toc-link" data-title="Creating a Simple Program">Creating a Simple Program</a>
+            <a href="#getting-started" class="toc-h1 toc-link" data-title="Getting Started">Getting Started</a>
+              <ul class="toc-list-h2">
+                  <li>
+                    <a href="#java" class="toc-h2 toc-link" data-title="Java">Java</a>
+                  </li>
+                  <li>
+                    <a href="#git" class="toc-h2 toc-link" data-title="Git">Git</a>
+                  </li>
+                  <li>
+                    <a href="#visual-studio-code" class="toc-h2 toc-link" data-title="Visual Studio Code">Visual Studio Code</a>
+                  </li>
+              </ul>
           </li>
       </ul>
         <ul class="toc-footer">
@@ -434,7 +436,13 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
 <td>Service Unavailable -- We&#39;re temporarily offline for maintenance. Please try again later.</td>
 </tr>
 </tbody></table>
-<h1 id='recipes'>Recipes</h1><h1 id='getting-started-with-java'>Getting Started with Java</h1><h1 id='getting-started-with-git'>Getting Started with Git</h1><h1 id='getting-started-with-visual-studio-code'>Getting Started with Visual Studio Code</h1><h1 id='creating-a-simple-program'>Creating a Simple Program</h1>
+<h1 id='recipes'>Recipes</h1><h1 id='getting-started'>Getting Started</h1><h2 id='java'>Java</h2>
+<p>Content under development</p>
+<h2 id='git'>Git</h2>
+<p>Content under development</p>
+<h2 id='visual-studio-code'>Visual Studio Code</h2>
+<p>Content under development</p>
+
       </div>
       <div class="dark-box">
           <div class="lang-selector">
