deploy: 3e154848133cefde11295b444069754a6df4770f

--- a/index.html
+++ b/index.html
@@ -615,15 +615,15 @@ git config <span class="nt">--global</span> user.email <span class="s2">"&lt;You
 </code></pre></div><h1 id='git-workflow'>Git Workflow</h1><h2 id='how-to-initiate-git-reository'>How to Initiate Git Reository</h2>
 <p>Before you can initiate git repository, first you must have an account for github. If you don&#39;t have one, you can sign up <a href="https://github.com/">here</a>. You&#39;ll see screen like this.</p>
 
-<p><img src="images/github-01.png" alt="screen shot 09-13-20" /></p>
+<p><img src="images/github-01.PNG" alt="screen shot 09-13-20" /></p>
 
 <p>If you already have an account for github, you can sign in and then click &#39;start a project&#39; on your own dashboard page.</p>
 
-<p><img src="images/github-02.png" alt="screen shot 09-13-20" /></p>
+<p><img src="images/github-02.PNG" alt="screen shot 09-13-20" /></p>
 
 <p>Fill in your repository name as free as you want (in case on this course, you can named your repository according to the task name given by lecturer). You also could write the description of your repository that makes you easier to remember for what this repository was created.</p>
 
-<p><img src="images/github-03.png" alt="screen shot 09-13-20" /></p>
+<p><img src="images/github-03.PNG" alt="screen shot 09-13-20" /></p>
 
 <p>(Note: in this course, don&#39;t forget to makes your repository access to public. So your lecturer and asistant lecturer could look up to your repository)</p>
 
