deploy: e58f36924bb6f7daf04acdc3c853b3628f4babe2

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 <tr>
 <td>Java Development Kit (JDK)</td>
 <td>Mandatory (duh?)</td>
-<td>Latest (&gt;= 10.0)</td>
+<td>10.0 &lt;= version &lt;= 14.0.2</td>
 </tr>
 <tr>
 <td>Git</td>
@@ -448,6 +448,10 @@
 </tr>
 </tbody></table>
 <h2 id='java'>Java</h2>
+<blockquote>
+<p><strong>Info</strong>: As of September 16th 2020, Visual Studio Code has yet to support JDK 15, the latest JDK edition. It is recommended to use JDK 14 instead while waiting for the support to mature.</p>
+</blockquote>
+
 <p>A Java Development Kit (JDK) installation comes with essential things to develop a Java program. Do note that JDK does not come with an editor like Python with its&#39; IDLE. You will need to write your program in a separate editor.</p>
 
 <p>To get the latest version of JDK, go to Oracle&#39;s site (<a href="https://www.oracle.com/java/technologies/javase-downloads.html">https://www.oracle.com/java/technologies/javase-downloads.html</a>), pick your desired JDK version (latest is better), then choose the correct file for each OS, which is:</p>
